care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/LWC_Config_Setting__mdt.object-meta.xml
<CustomObject>
    <label>LWC Config Setting</label>
    <pluralLabel>LWC Config Settings</pluralLabel>
</CustomObject>