care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Campaign_AutoRelendDonation__c.field-meta.xml
<CustomField>
    <fullName>Campaign_AutoRelendDonation__c</fullName>
    <label>Campaign_AutoRelendDonation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>