care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Change_Champion_Currencies__c.field-meta.xml
<CustomField>
    <fullName>Change_Champion_Currencies__c</fullName>
    <label>Change Champion Currencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>