care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Change_Champion_Minimum_Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Change_Champion_Minimum_Other_Currency__c</fullName>
    <label>Change Champion Minimum Other Currency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>