care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Default_Donation_at_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Default_Donation_at_Checkout__c</fullName>
    <label>Default Donation at Checkout (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>