care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/FSP_Payment_Threshold_USD__c.field-meta.xml
<CustomField>
    <fullName>FSP_Payment_Threshold_USD__c</fullName>
    <label>FSP Payment Threshold (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>