care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/FX_Gain_Lender__c.field-meta.xml
<CustomField>
    <fullName>FX_Gain_Lender__c</fullName>
    <label>FX Gain Lender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>