care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Group_Borrower_Limit_AUD__c.field-meta.xml
<CustomField>
    <fullName>Group_Borrower_Limit_AUD__c</fullName>
    <label>Group Borrower Limit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>