care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Inactive_Lender_Limit_Days__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Lender_Limit_Days__c</fullName>
    <label>Inactive Lender Limit (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>