care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Lending_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Lending_Buffer__c</fullName>
    <label>Lending Buffer (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>