care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Loan_Acceptance_Days__c.field-meta.xml
<CustomField>
    <fullName>Loan_Acceptance_Days__c</fullName>
    <label>Loan Acceptance (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>