care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Loan_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amounts__c</fullName>
    <label>Loan Amounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>