care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Loan_Publish_Limit_Days__c.field-meta.xml
<CustomField>
    <fullName>Loan_Publish_Limit_Days__c</fullName>
    <label>Loan Publish Limit (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>