care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/LWC_AML_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>LWC_AML_Transaction_Status__c</fullName>
    <label>LWC AML Transaction Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>