care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/LWC_GuestLender__c.field-meta.xml
<CustomField>
    <fullName>LWC_GuestLender__c</fullName>
    <label>LWC_GuestLender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>