care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/LWC_Impact_Colour__c.field-meta.xml
<CustomField>
    <fullName>LWC_Impact_Colour__c</fullName>
    <description>This field is used for setting up the colors of Donut component on Transaction.</description>
    <label>LWC Impact Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>