care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Minimum_Lending_Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Lending_Amount_AUD__c</fullName>
    <label>Minimum Lending Amount (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>