care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Missed_Repayments_Nonperforming__c.field-meta.xml
<CustomField>
    <fullName>Missed_Repayments_Nonperforming__c</fullName>
    <label>Missed Repayments Nonperforming</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>