care-australia-uat/force-app/main/default/objects/LWC_Config_Setting__mdt/fields/Number_of_Days_Manual_Refund__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Manual_Refund__c</fullName>
    <label>Number of Days - Manual Refund</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>